<resources>
    <string name="app_name">MT Catalogue API</string>
    <string name="full_app_name">Movie or Tv Show Catalogue API</string>
    <string name="mt_image">MT Image</string>
    <string name="rating_rate">Rating Rate</string>
    <string name="share">Share</string>
    <string name="first_air">First Air Date:</string>
    <string name="release_date">Release Date</string>
    <string name="user_rate">%d users</string>
    <string name="movie">Movie</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show\n%1$s, %2$s (%3$s)</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="background_poster">Background Poster</string>
    <string name="overview_in_english_only">Overview\n%s\n(in English only)</string>
    <string name="company_logo">Company Logo</string>
    <string name="production_companies">Production Companies</string>
    <string name="genres">Genres:</string>
</resources>